------------------------------------------------------------
04/28/2023
SQL SCRIPTS
- reworked cashier_assignments table, such that it only stores cashier_id and register_id
- added trigger cashier_assignments_after_update, which stores the login and log offs for the registers
DATABASE ADMIN TERMINAL
- completed context menus for adding item, store, register, member, and cashier
- 