@@ -1,0 +1,5 @@
+{
+    "cSpell.words": [
+        "SQLSTATE"
+    ]
+}
