@@ -482,3 +482,44 @@ BEGIN
         given_phone_number, given_email_address);
 END //
 DELIMITER ;
+DELIMITER //
+CREATE PROCEDURE cashierRegisterLogin(
+    given_cashier_number CHAR(6),
+    given_register_number VARCHAR(16)
+)
+BEGIN
+    -- creates exception for invalid register_id and/or cashier_id
+    DECLARE no_such_register_cashier CONDITION FOR SQLSTATE '45000';
+    IF given_cashier_number NOT IN (SELECT cashier_number FROM cashiers) 
+    OR given_register_number NOT IN (SELECT register_number FROM registers) THEN
+        SIGNAL no_such_register_cashier SET MESSAGE_TEXT = 'No such register_id and/or cashier_id exists';
+    END IF;
+
+    UPDATE cashier_assignments
+    SET cashier_id = (SELECT cashier_id FROM cashiers WHERE cashier_number = given_cashier_number)
+    WHERE register_id = (SELECT register_id FROM registers WHERE register_number = given_register_number);
+END //
+DELIMITER ;
+
+-- ********
+-- TRIGGERS
+-- ********
+-- cashier_assignments_after_update
+DELIMITER //
+CREATE TRIGGER cashier_assignments_after_update
+    BEFORE UPDATE ON cashier_assignments
+    FOR EACH ROW
+BEGIN
+    -- only limitation is that, if the register has a NULL cashier_id, then there will be a sign out
+    -- for a NULL cashier
+    INSERT INTO cashier_assignments_audit
+    VALUES (OLD.register_id, OLD.cashier_id, 'Sign out', NOW() );
+
+    INSERT INTO cashier_assignments_audit
+    VALUES (NEW.register_id, NEW.cashier_id, 'Sign in', NOW() );
+
+    -- fixes edge case, removing rows where a NULL employee logins
+    DELETE FROM cashier_assignments_audit
+    WHERE cashier_id IS NULL;
+END //
+DELIMITER ;
